Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29918

Branch view does not update after using "Rebase" from it

XMLWordPrintable

    • 546fb6e75 (master)

      1. Have a git repository with a tracking branch which is not up to date with its origin.
      2. Show that in Creator's Branches view.
        It indicates the branches' relation:
      3. Right-click the tracked remote branch and select "Rebase (local branch) on (remote branch)".
        The branch is being rebased in the repository but the numbers in the Branches view don't update. They still indicate that the branch was behind.

      Instead, the numbers should be 0, 0 after the successful rebase. A manual update of the view corrects this.

      The manual update is not needed for the "Merge (fast-forward)" or "Reset" actions. There, the Branches view updates as expected

        1. branch.png
          3 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            aha_1980 André Hartmann
            rlohning Robert Löhning
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes