Git: Expect repo changes on modifying commands

Pull, (interactive) rebase, cherry-pick, revert and
synchronous reset etc. can change files and branch
states (e.g. ahead/behind markers in the branch view).

synchronousMerge() and async reset(hard) already handled
this situation correctly.

And as soft and mixed resets also affects the ahead/behind markers, make
them work like hard reset too.

Fixes: QTCREATORBUG-29918
Change-Id: I233466387647756387c3f0a8989021a6d341602d
Reviewed-by: Orgad Shaneh <orgads@gmail.com>